--- a/style.css
+++ b/style.css
@@ -10,3 +10,64 @@ body {
 }
 
 /* Add styles here! */
+
+h1 {
+  font-size: 2rem;
+  line-height: 1.2;
+  margin: 0px;
+  margin-bottom: 3rem;
+}
+
+header {
+  border-bottom: 8px solid hsl(0 0% 60%);
+}
+
+strong {
+  color: hsl(160, 100%, 30%);
+}
+
+p {
+  font-size: 1.25rem;
+  line-height: 1.5;
+  margin: 0px;
+  margin-bottom: 1rem;
+}
+
+p:last-child {
+  margin-bottom: 0px;
+}
+
+main {
+  background-color: hsl(0 0% 40%);
+  height: 450px;
+  padding-block: 64px;
+}
+
+.intro-chunk {
+  max-width: 415px;
+  margin-top: 96px;
+  padding-bottom: 64px;
+}
+
+.max-width-wrapper {
+  max-width: 800px;
+  margin-inline: auto;
+  padding-inline: 24px;
+}
+
+.card {
+  padding: 24px;
+  border-bottom: 8px solid hsl(0 0% 60%);
+  background-color: white;
+  margin: 0px -24px;
+}
+
+.indented-heading {
+  width: fit-content;
+  font-size: 1.5rem;
+  line-height: 1.2;
+  margin: -16px 0px 1rem -32px;
+  padding: 16px 32px;
+  background-color: hsl(45, 100%, 50%);
+  border-bottom: 8px solid hsl(45, 100%,40%);
+}
